# lazy-myles

./: .bumpversion.cfg  .deepsource.toml  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  gh-pages.yml  test.yml
designs/: lazy-myles-github-card.psd
docs/: api.rst  conf.py
lazymyles/: __init__.py  download_file.py  regexs.py
lazymyles/html/: description_list.py
tests/: test_download_file.py  test_regexs.py  test_version.py
tests/html/: fixtures.py  test_description_list.py
