[tool.poetry]
name = "lazy-myles"
version = "1.0.0"
description = "Myles is super lazy and is tired of having to repeat so much code."
authors = ["Myles Braithwaite <me@mylesbraithwaite.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/myles/lazy-myles"
repository = "https://github.com/myles/lazy-myles"
packages = [
    { include = "lazymyles" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
pyquery = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
twine = "^3.2.0"
pytest = "^6.1.2"
isort = "^5.6.4"
responses = "^0.12.1"
mypy = "^0.790"
pytest-cov = "^2.10.1"
bumpversion = "^0.6.0"
Sphinx = "^5.3.0"
myst-parser = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
