[tool.poetry]
name = "lazy-myles"
version = "1.0.0"
description = "Myles is super lazy and is tired of having to repeat so much code."
authors = ["Myles Braithwaite <me@mylesbraithwaite.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/myles/lazy-myles"
repository = "https://github.com/myles/lazy-myles"
packages = [
    { include = "lazymyles" },
]

[tool.poetry.dependencies]
python = "^3.9"
pyquery = "^2.0.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.4"}
black = "^23.1a1"
bumpversion = "^0.6.0"
flake8 = "6.0.0"
isort = "^5.6.4"
mypy = "^0.991"
myst-parser = "^0.18.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
responses = "^0.22.0"
ruff = "^0.0.252"
Sphinx = "^5.3.0"
types-requests = "^2.28.11.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.mypy]

[[tool.mypy.overrides]]
module = 'pyquery'
ignore_missing_imports = true